[package]
name = "axprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

fs = ["axfs"]

monolithic = ["fs", "axfs/monolithic", "axhal/monolithic", "axtask/monolithic"]

default = ["monolithic"]

[dependencies]
cfg-if = "1.0"
spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
axtask = { git = "https://github.com/Starry-OS/axtask.git" }
axsync = { git = "https://github.com/Starry-OS/axsync.git" }
axmem = { git = "https://github.com/Starry-OS/axmem.git" }
axalloc = { git = "https://github.com/Starry-OS/axalloc.git" }
axio = { git = "https://github.com/Starry-OS/axio.git", features = ["alloc"] }
axhal = { git = "https://github.com/Starry-OS/axhal.git" }
axlog = { git = "https://github.com/Starry-OS/axlog.git" }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
axfs = { git = "https://github.com/Starry-OS/axfs.git", optional = true }
axsignal = { git = "https://github.com/Starry-OS/axsignal.git" }
riscv = "0.10"
bitflags = "2.0"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
xmas-elf = "0.9.0"
elf_parser = { git = "https://github.com/Starry-OS/elf_parser.git" }